Added basic metrics
